--- a/index.html
+++ b/index.html
@@ -8,15 +8,29 @@
 
 <body>
     <div class="grid-container">
-        <div class="grid-item grid-item-1">1</div>
+        <div class="grid-item grid-item-1">1
+            <div class="subgrid-row">
+                <div class="row-items">sub1</div>
+                <div class="row-items">sub2</div>
+                <div class="row-items">sub3</div>
+                <div class="row-items">sub4</div>
+            </div>
+        </div>
         <div class="grid-item grid-item-2">2</div>
         <div class="grid-item grid-item-3">3</div>
         <div class="grid-item grid-item-4">4</div>
-        <div class="grid-item grid-item-6">7</div>
+        <div class="grid-item grid-item-6">5</div>
         <div class="grid-item grid-item-5">6</div>
         <div class="grid-item grid-item-7">7</div>
         <div class="grid-item grid-item-8">8</div>
-        <div class="grid-item grid-item-9">9</div>
+        <div class="grid-item grid-item-9">9
+            <div class="subgrid-container">
+                <div class="subgrid-item">Sub 1</div>
+                <div class="subgrid-item">Sub 2</div>
+                <div class="subgrid-item">Sub 3</div>
+                <div class="subgrid-item">Sub 4</div>
+            </div>
+        </div>
         
     </div>
 </body>
